# hid-customizer-rs

./: .gitmodules  Cargo.toml
C_LIB/Pico-PIO-USB/: Cargo.toml  build.rs  wrapper.h
src/: main.rs  usb_host_driver.rs
