[package]
authors = ["Satsuki Akiba"]
name = "hid-customizer-rs"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.4.1"
rp2040-hal = "0.5.0"
usb-device = "0.2.8"
usbd-hid = "0.6.0"
usb-host = "0.1.2"

[profile.release]
debug = 2

[workspace]
members = [
    "../hid-customizer-rs",
    "./C_LIB/Pico-PIO-USB"
]